init about json for aboutpage

--- a/src/Styles/Homes_Components.scss
+++ b/src/Styles/Homes_Components.scss
@@ -7,6 +7,10 @@
     flex-wrap: wrap;
     border-radius: 10px;
     margin: 25px;
+    transition: transform 0.3s;
+  }
+  &_Card:hover {
+    transform: scale(1.13);
   }
   &_Title {
     margin-top: auto;
