summary fix issues in page location and add some content

--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -11,11 +11,15 @@
 .MainDivImg {
   display: flex;
   justify-content: center;
+  width: 90%;
+  padding: 0px 65px;
+  margin-bottom: 80px;
 }
 .MainDivHomes {
   width: 90%;
-  background: #F2F2F2;
+  background: #ECECEC;
   border-radius: 25px;
+  margin-bottom: 80px;
   &_Infos {
     display: flex;
     flex-wrap: wrap;
