--- a/src/Styles/DropDown.scss
+++ b/src/Styles/DropDown.scss
@@ -15,7 +15,7 @@
     outline: none;
   }
   &_content {
-    background-color: #F2F2F2;
+    background-color: #ECECEC;
     overflow: auto;
     transition: max-height 0.6s ease;
     height: 117px;
