--- a/src/Styles/Homes_Components.scss
+++ b/src/Styles/Homes_Components.scss
@@ -7,7 +7,9 @@
     flex-wrap: wrap;
     border-radius: 10px;
     margin: 25px;
+    background-size: cover;
     transition: transform 0.3s;
+    filter: brightness(85%);
   }
   &_Card:hover {
     transform: scale(1.13);
