--- a/src/Styles/DropDown.scss
+++ b/src/Styles/DropDown.scss
@@ -16,9 +16,10 @@
   }
   &_content {
     background-color: #ECECEC;
-    overflow: auto;
+    /*max-height: 250px;*/
+    overflow: hidden;
     transition: max-height 0.6s ease;
-    height: 117px;
+    height: 180px;
     width: 89%;
     left: 0;
     top: 38px;
