--- a/src/Styles/Homes_Components.scss
+++ b/src/Styles/Homes_Components.scss
@@ -1,27 +1,28 @@
 .LocationLinks{
   text-decoration: none;
   &_Card {
-    width: 340px;
-    height: 340px;
+    width: 300px;
+    height: 320px;
     display: flex;
     flex-wrap: wrap;
     border-radius: 10px;
     margin: 25px;
     background-size: cover;
-    transition: transform 0.3s;
-    filter: brightness(85%);
+    transition: transform 0.2s;
+    box-shadow: rgba(0, 0, 0, 0.7) 0px -50px 40px inset;
+    /*filter: brightness(85%);*/
   }
   &_Card:hover {
     transform: scale(1.13);
   }
   &_Title {
     margin-top: auto;
-    margin-bottom: 5px;
     position: relative;
-    z-index: 2;
-    color: white;
+    color: #ffffff;
+    /*text-shadow: 5px 5px 5px white;*/
     height: 52px;
-    width: 250px;
+    font-weight: 600;
+    width: 230px;
     Left: 20px;
     font-family: Montserrat, sans-serif;
     font-size: 15px;
