--- a/src/Styles/PageLocation.scss
+++ b/src/Styles/PageLocation.scss
@@ -1,3 +1,6 @@
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
 .slideshow_location {
   margin-top: 35px;
 }
@@ -7,17 +10,18 @@
   width: 100%;
   height: 415px;
   object-fit: cover;
-  filter: brightness(85%);
+  filter: brightness(95%);
 }
 .MainSubContent {
   display: flex;
   width: 100%;
 }
 .BigContent {
-  padding: 0 0px;
-  width: 100%;
-  max-width: 1520px;
-  margin: 0px auto;
+  width: 75.75rem;
+  height: 100%;
+  min-height: 100vh;
+  margin: auto;
+  padding: 0 3rem;
   &_PartOne {
     display: flex;
     flex-direction: row;
@@ -32,8 +36,9 @@
   &_TitleHost {
     display: flex;
     padding: 0 60px;
+    flex-wrap: wrap;
     &_Text {
-      width: 1050px;
+      width: 920px;
     }
   }
   &_Tags {
@@ -54,7 +59,7 @@
   flex-direction: row;
   justify-content: space-around;
   margin-left: 3.5%;
-  width: 80%;
+  width: 84%;
   margin-bottom: 50px;
 }
 
