add final elements and refractor scss

--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -30,7 +30,7 @@ body {
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 10px;
+    margin-bottom: 20px;
   }
   &_MainContainer {
     display: flex;
