--- a/src/Styles/HomesDropDown.scss
+++ b/src/Styles/HomesDropDown.scss
@@ -41,7 +41,7 @@
   transition: max-height 0.6s ease;
   height: 249px;
   width: 500px;
-  left: 0px;
+  left: 0;
   top: 38px;
   border-radius: 10px;
 }
