--- a/src/Styles/DropDown.scss
+++ b/src/Styles/DropDown.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   &_toggle {
-    width: 89%;
-    height: 47px;
+    width: 83%;
+    margin-left: 18px;
+    height: 45px;
     border-radius: 5px;
     background-color: #FF6060;
     color: white;
@@ -18,9 +19,10 @@
     background-color: #ECECEC;
     /*max-height: 250px;*/
     overflow: hidden;
-    transition: max-height 0.6s ease;
-    height: 180px;
-    width: 89%;
+    transition: all 1700ms ease-in-out;
+    height: 200px;
+    width: 83%;
+    margin-left: 18px;
     left: 0;
     top: 38px;
     border-radius: 5px;
@@ -32,17 +34,18 @@
     text-align: left;
   }
   &_text {
+    line-height: 2;
     color: #FF6060;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 18px;
     padding: 18px;
   }
 }
 
 .dropdown_icon {
   margin-left: auto;
-  transition: transform 0.6s ease;
+  transition: all 1700ms ease-in-out;
 }
 
 .rotate {
