--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -7,6 +7,7 @@ body {
   width: 1250px;
   height: 250px;
   border-radius: 25px;
+  margin-top: -120px;
   filter : brightness(85%);
 }
 .SecndMainDivImg {
@@ -22,6 +23,7 @@ body {
 }
 
 .MainDivAbout {
+  margin: -40px 0px -40px 0px;
   display: flex;
   width: 90%;
   flex-wrap: wrap;
@@ -46,3 +48,22 @@ body {
 }
 
 
+
+@media screen and (max-width: 400px) {
+.ClimbTwo {
+  width: 365px;
+  margin-left: 17px;
+  height: 240px;
+  border-radius: 10px;
+  margin-bottom: 30px;
+}
+.MainDivAbout {
+  margin: 0px 0px -60px 0px;
+}
+
+
+
+
+
+
+}
