--- a/src/Styles/Carrousel.scss
+++ b/src/Styles/Carrousel.scss
@@ -21,7 +21,7 @@
     width: calc(100% - 30px);
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
+    padding: 0 10px 0 15px;
   }
   &_Index {
     position: absolute;
@@ -41,6 +41,16 @@
   &:hover{
     color: $primarycolor;
     transform: scale(1.9) rotateX(3.142rad);
-    /*color: $primarycolor;*/
   }
+}
+
+// init media responsive
+@media screen and (max-width: 400px) {
+
+.MainDivCarrousel_Controls {
+  top: 45%;
+}
+
+
+
 }
