--- a/src/Styles/HomesLocation.scss
+++ b/src/Styles/HomesLocation.scss
@@ -1,17 +1,13 @@
 @import "Utils";
+
+
 body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
-.slideshow_location {
-  margin-top: 35px;
-}
+
 
 .slideshow_location img{
-  border-radius: 30px;
-  width: 100%;
-  height: 415px;
-  object-fit: cover;
-  filter: brightness(95%);
+
 }
 .MainSubContent {
   display: flex;
@@ -23,6 +19,16 @@ body::-webkit-scrollbar {
   min-height: 100vh;
   margin: auto;
   padding: 0 3rem;
+  &_ShowCarrousel {
+    margin-top: 35px;
+    img {
+      border-radius: 30px;
+      width: 100%;
+      height: 415px;
+      object-fit: cover;
+      filter: brightness(95%);
+    }
+  }
   &_PartOne {
     display: flex;
     flex-direction: row;
@@ -41,6 +47,14 @@ body::-webkit-scrollbar {
     &_Text {
       width: 925px;
       margin-left: 5px;
+    }
+    &_Titre {
+      font-weight: 500;
+      font-size: 35px;
+    }
+    &_SubTitle {
+      margin-top: -20px;
+      font-size: 20px;
     }
   }
   &_Tags {
@@ -66,6 +80,49 @@ body::-webkit-scrollbar {
     width: 100%;
   }
 }
+// media init
 
+@media screen and (max-width: 400px) {
+  .BigContent {
+    width: unset;
+    height: unset;
+    min-height: unset;
+    margin: auto;
+    padding: unset;
+    &_PartOne {
+      margin-bottom: 150px;
+    }
+    &_Main {
+      width: 100px;
+    }
+    &_TitleHost_Titre {
+      font-size: 20px;
+      width: 165px;
+    }
+    &_TitleHost_Text {
+      margin-left: -40px;
+    }
+    &_TitleHost_SubTitle {
+      font-size: 15px;
+    }
+    &_PartTwo {
+      width: 100px;
+      flex-wrap: wrap;
+      flex-direction: column;
+      display: flex;
+      gap: 20px;
+      margin-left: 115px;
+    }
+    &_ShowCarrousel img {
+      border-radius: 10px;
+      height: 310px;
+    }
+    .MainDivCarrousel {
+     border-radius: 10px;
+    }
+  }
+
+
+}
 
 
