add final style and responsive

--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -51,14 +51,14 @@ body {
 
 @media screen and (max-width: 400px) {
 .ClimbTwo {
-  width: 365px;
-  margin-left: 17px;
+  width: 350px;
+  margin-left: 10px;
   height: 240px;
   border-radius: 10px;
   margin-bottom: 30px;
 }
 .MainDivAbout {
-  margin: 0px 0px -60px 0px;
+  margin: 0 0 -60px 0;
 }
 
 
