--- a/src/Styles/Banner.scss
+++ b/src/Styles/Banner.scss
@@ -67,3 +67,28 @@
 
 
 }
+
+// init media responsive
+/*
+
+@media (min-width: 401px) and (max-width:430px) {
+  .BannerDiv_Kasa_logo {
+    width: 130px;
+    height: 150px;
+  }
+  .BannerDiv {
+    padding: 0 20px;
+    &_MainNav {
+      margin-top: unset;
+    }
+    &_Links {
+      text-transform: uppercase;
+      font-size: 15px;
+      margin-left: 10px;
+    }
+  }
+
+
+
+
+}*/
