--- a/src/Styles/Error404.scss
+++ b/src/Styles/Error404.scss
@@ -21,7 +21,19 @@
 }
 
 
+}
 
+@media screen and (max-width: 400px) {
+
+  .MainDiv_Oups {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 130px;
+  }
+
+  .MainDiv_Four {
+    font-size: 130px;
+  }
 
 
 }
